[package]
name = "mcav"
version = "0.1.3"
edition = "2021"
description = "Minecraft avatar in the terminal"
authors = ["Zielino"]
license = "MIT"
homepage = "https://github.com/Zielin0/mcav"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
colored = "2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.2"

[[bin]]
name = "mcav"
path = "src/main.rs"
